versioned_docs/version-1.12.x/http-api/index.mdx
---
sidebar_position: 4
title: Basic Concepts
description: HTTP API documentation for interacting with the database.
---

<head>
  <link rel="canonical" href="https://www.reduct.store/docs/http-api" />
</head>

ReductStore provides an HTTP API for interacting with the database. The API allows you to read, write, and query data, as well as manage the database itself.
The API follows the RESTful principles and uses JSON as the primary data format for administrative operations.

## Token Authentication

ReductStore provides an HTTP API for interacting with the database. In order to use the API, you must first authenticate using a token, which you can be provisioned one with the `RS_API_TOKEN` **[environment variable](./configuration)** or created with [**the Token API**](./http-api/token-authentication).

Once you have obtained a token, you can use it to authenticate your requests by including it in the `authorization` header of your HTTP request, like this:

```
authorization: Bearer <your-token-here>
```

An example of a request with CURL:

```shell
 curl   --header "authorization: Bearer ${ACCESS_TOKEN}" -a http://127.0.0.1:8383/api/v1/info
```

:::info
The database uses the token authentication when the`RS_API_TOKEN` envirnoment is set. You should use it as a full access token to create other tokens with different permission by using the Token API
:::

## Handling Errors

If a request to ReductStore fails, the API returns an HTTP status code indicating the type of error that occurred. For example, a `404 Not Found' status code indicates that the requested resource could not be found.

As of version 1.2.0, the HTTP API also includes an error message in the `x-reduce-error` header of the response. This error message provides more detailed information about the error, which can be useful for debugging and troubleshooting.

import DocCardList from "@theme/DocCardList";

<DocCardList />
